--- a/app/web.config
+++ b/app/web.config
@@ -8,7 +8,7 @@
             <conditions>
                 <add input="{HTTPS}" pattern="^OFF$" />
             </conditions>
-            <action type="Redirect" url="https://azurechecklist.com" />
+            <action type="Redirect" url="https://localhost" />
         </rule>
     </rules>
             <outboundRules>
@@ -24,7 +24,7 @@
 </rewrite>
    <httpProtocol>
      <customHeaders>
-       <add name="Access-Control-Allow-Origin" value="https://azurechecklist.com" />
+       <add name="Access-Control-Allow-Origin" value="https://localhost" />
      </customHeaders>
    </httpProtocol>
 <staticContent>
