--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install
+    npm install gulp
     gulp default --gulpfile gulpfile.js
   displayName: 'npm install and run gulp'
